Feature added (Home Page): Added CSS for Background and Header

--- a/files/index.html
+++ b/files/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
-<script type="text/javascript" src="javascript/javascript.js"></script>
-<title>Moonshot | Microservices for Everyone!</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<script type="text/javascript" src="javascript.js"></script>
+	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
+	<title>Moonshot | Rocket Science for Everyone!</title>
 </head>
 
 <body>
-<h1>Moonshot Software</h1>
-This is the placeholder for the Moonshot homepage
+
+<div class="stars">
+	<header>
+		<a href="#" id="logo"></a>
+	
+	<nav>
+		<ul>
+			<li><a href="#">What Is a Moonshot?</li>
+			<li><a href="#">Blog</li>
+			<li><a href="#">Contact Us</li>
+		</ul>
+	<nav>
+
+	</header>
+	
+	<div class="content">
+	</div>
+	
+	<div class="footer">
+	</div>
+
+</div>
+
 </body>
 
 </html>
