--- a/files/contact.html
+++ b/files/contact.html
@@ -9,27 +9,8 @@
 </head>
 
 <body>
-
 <div class="stars">
-	<header>
-		<a href="#" id="logo"></a>
-	
-	<nav>
-		<ul>
-			<li><a href="#">What Is a Moonshot?</li>
-			<li><a href="#">Blog</li>
-			<li><a href="contact.html">Contact Us</li>
-		</ul>
-	<nav>
-
-	</header>
-	
-	<div class="content">
-	</div>
-	
-	<div class="footer">
-	</div>
-
+<h1>Contact Us</h1>
 </div>
 
 </body>
