Feature Added (Home Page): Header and Footer
* Set header and footer to a fixed position
* Set small footer image
* Changed viewport <meta> tag for better mobile device support

--- a/files/moonshot.html
+++ b/files/moonshot.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
 <div class="stars">
 
 	<header>
@@ -21,10 +22,10 @@
 
 		<ul>
 
-			<li><a href="index.html">Home</a></li>
-			<li><a href="moonshot.html">What Is a Moonshot?</a></li>
+			<li><a href="index.html" class="">Home</a></li>
+			<li><a href="moonshot.html" class="current">What Is a Moonshot?</a></li>
 			<li><a href="#">Blog</a></li>
-			<li><a href="contact.html" class="current">Contact Us</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
 		
 		</ul>
 	
@@ -36,7 +37,7 @@
 
 	<article>
 
-		<h1>Contact Us</h1>
+		<h1>What Is a Moonshot?</h1>
 
 	</article>
 
