Feature Added (All Pages): Added new website footer
* Added a new site footer
* Added CSS media queries for responsive design elements

--- a/files/contact.html
+++ b/files/contact.html
@@ -14,6 +14,8 @@
 	<header>
 
 		<a href="#" id="logo"></a>
+
+		<!-- <h2>Rocket Science for Everyone!</h2> -->
 	
 	<nav>
 
@@ -42,7 +44,8 @@
 
 	<footer>
 
-		<img src="Moonshot-Website-Footer-318px.png">
+		<img id="large-footer" src="Moonshot-Website-Footer-640px.png">
+		<img id="small-footer" src="Moonshot-Website-Footer-329px.png">
 	
 	</footer>
 
