--- a/files/index.html
+++ b/files/index.html
@@ -15,6 +15,8 @@
 	<header>
 
 		<a href="#" id="logo"></a>
+
+		<!-- <h2>Rocket Science for Everyone!</h2> -->
 	
 	<nav>
 
@@ -53,7 +55,8 @@
 
 	<footer>
 
-		<img src="Moonshot-Website-Footer-318px.png">
+		<img id="large-footer" src="Moonshot-Website-Footer-640px.png">
+		<img id="small-footer" src="Moonshot-Website-Footer-329px.png">
 	
 	</footer>
 
