Feature Added (Blog): Added Blog Page
* Added blog.html
* Added post.json

--- a/files/blog.html
+++ b/files/blog.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
 <div class="stars">
 
 	<header>
@@ -25,8 +24,8 @@
 		<ul>
 
 			<li><a href="index.html">Home</a></li>
-			<li><a href="moonshot.html" class="current">What Is a Moonshot?</a></li>
-			<li><a href="blog.html">Blog</a></li>
+			<li><a href="moonshot.html">What Is a Moonshot?</a></li>
+			<li><a href="blog.html" class="current">Blog</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
 		
 		</ul>
@@ -39,7 +38,7 @@
 
 	<article>
 
-		<h1>What Is a Moonshot?</h1>
+		<h1>Blog</h1>
 
 	</article>
 
