--- a/files/contact.html
+++ b/files/contact.html
@@ -25,7 +25,7 @@
 
 			<li><a href="index.html">Home</a></li>
 			<li><a href="moonshot.html">What Is a Moonshot?</a></li>
-			<li><a href="#">Blog</a></li>
+			<li><a href="blog.html">Blog</a></li>
 			<li><a href="contact.html" class="current">Contact Us</a></li>
 		
 		</ul>
