--- a/files/index.html
+++ b/files/index.html
@@ -26,7 +26,7 @@
 
 			<li><a href="index.html" class="current">Home</a></li>
 			<li><a href="moonshot.html">What Is a Moonshot?</a></li>
-			<li><a href="#">Blog</a></li>
+			<li><a href="blog.html">Blog</a></li>
 			<li><a href="contact.html">Contact Us</a></li>
 		
 		</ul>
